--- a/README
+++ b/README
@@ -2,4 +2,4 @@ This is set of little programs that were written in need. Most of them are uniqu
 
 This set of programs is in public domain. You can do what you want with this code.
 
-More programs can be found here: http://lynxlynx.tk/prg/
+More programs can be found here: http://lynxlynx.ru/prg/
